2014-05-20 - 0.3.5 - Silvio Rhatto <rhatto@riseup.net>

	Use a custom .vimrc so VIM command line is not messed with quotes (#50)

2014-05-16 - 0.3.4 - Silvio Rhatto <rhatto@riseup.net>

	Workaround for open/edit action returning instantaneously (#49)

	Use 'nobackup' and 'nowritebackup' if VIM is set as $EDITOR (#50)

	Find: rollback: use find+grep instead of 'find -iname' (#53)

	Edit/open: wait for background process to finish (#49)

	Edit: use encrypt action

	Encrypt: support for KEYRINGER_ADD_EXTENSION environment variable
	which controls if file extension should be appended to secret name

	Genpair: generate ssh and ssl keys with 4096 bits size

	Fix usage message inside keyringer shell

	Fix recryption error when using gpg-agent in text mode (#55)

	Be more verbose on recrypt errors

	Adding "commit" action which is a wrapper around "git commit"

	Align command output

	Avoid viminfo if VIM is set as $EDITOR (#50)

2014-03-22 - 0.3.3 - Silvio Rhatto  <rhatto@riseup.net>

	Use --recv-keys instead of --refresh-keys

	Use -iname at find action

	Removing --prune from git gc

	Spell checking as suggested by Debian #741644

2014-03-14 - 0.3.2 - Silvio Rhatto  <rhatto@riseup.net>

	Subkey expiration date check shall not happen with expired keys

	Make usage more readable

	Added "destroy" alias to "teardown" action

2014-03-14 - 0.3.1 - Silvio Rhatto  <rhatto@riseup.net>

	Try to get an initial recipient (#32)

	New action: check (#39)

	Enhanced secret finder at keyringer_get_file and on find action

	Added find action into shell completions

	Using XA_PRIMARY selection at xclip action

	Fixed secret paths at mv action

	Do not use RELATIVE_PATH on git action

	Fixed test output at xclip action

2014-02-20 - 0.3 - Silvio Rhatto  <rhatto@riseup.net>

	Try to find a similar file at keyringer_get_file

	Added xclip action (#33)

	Check key expirations (#37)

	Proper error handling at edit action

	New actions: find, mv, rmdir
