@@ -26,8 +26,8 @@ install_lib:
 	$(INSTALL) -D --mode=0755 lib/keyringer/functions $(DESTDIR)/$(PREFIX)/lib/$(PACKAGE)/functions
 	$(INSTALL) -D --mode=0755 -d lib/keyringer/actions $(DESTDIR)/$(PREFIX)/lib/$(PACKAGE)/actions
 	$(INSTALL) -D --mode=0755 lib/keyringer/actions/* $(DESTDIR)/$(PREFIX)/lib/$(PACKAGE)/actions
-	$(INSTALL) -D --mode=0755 -d lib/keyringer/editors $(DESTDIR)/$(PREFIX)/lib/$(PACKAGE)/actions
-	$(INSTALL) -D --mode=0755 lib/keyringer/editors/* $(DESTDIR)/$(PREFIX)/lib/$(PACKAGE)/actions
+	$(INSTALL) -D --mode=0755 -d lib/keyringer/editors $(DESTDIR)/$(PREFIX)/lib/$(PACKAGE)/editors
+	$(INSTALL) -D --mode=0755 lib/keyringer/editors/* $(DESTDIR)/$(PREFIX)/lib/$(PACKAGE)/editors
 
 install_bin:
 	$(INSTALL) -D --mode=0755 keyringer $(DESTDIR)/$(PREFIX)/bin/keyringer
@@ -58,7 +58,11 @@ tarball:
 release:
 	@make build_man
 	git commit -a -m "Keyringer $(VERSION)"
-	git flow release finish -s -m "Keyringer $(VERSION)" $(VERSION)
+	# See https://github.com/nvie/gitflow/issues/87
+	#     https://github.com/nvie/gitflow/pull/160
+	#     https://github.com/nvie/gitflow/issues/50
+	#git flow release finish -s -m "Keyringer $(VERSION)" $(VERSION)
+	git flow release finish -s $(VERSION)
 	git checkout master
 	@make tarball
 	gpg --use-agent --armor --detach-sign --output ../tarballs/keyringer-$(VERSION).tar.bz2.asc ../tarballs/keyringer-$(VERSION).tar.bz2
@@ -67,3 +71,11 @@ release:
 	# http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=568375
 	#git tag -s $(VERSION) -m "Keyringer $(VERSION)"
 	git checkout develop
+
+debian:
+	git checkout debian
+	git-import-orig --upstream-vcs-tag=$(VERSION) ../tarballs/keyringer-$(VERSION).tar.bz2
+	# Fine tune debian/changelog prepared by git-dch
+	dch -e
+	git commit -a -m "Updating debian/changelog"
+	git-buildpackage --git-tag-only --git-sign-tags
