@@ -1,3 +1,9 @@
+2014-05-20 - 0.3.6 - Silvio Rhatto <rhatto@riseup.net>
+
+	Makefile fix
+
+	Updated workflow
+
 2014-05-20 - 0.3.5 - Silvio Rhatto <rhatto@riseup.net>
 
 	Use a custom .vimrc so VIM command line is not messed with quotes (#50)
